fix: footer elements alignment

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -2,10 +2,10 @@
   height: 92px;
   width: 100%;
   flex: 0 0 auto;
-  border-top: 1px solid #D0D9DF;
+  border-top: 1px solid #d0d9df;
   display: flex;
   justify-content: center;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .footer__container {
@@ -14,19 +14,24 @@
   justify-content: space-between;
   align-items: center;
 
-
-  .footer_copyright {
-    color: #11397E;
+  .copyright {
+    color: #11397e;
+    margin: 0;
   }
 
-  .footer__payment {
+  .payment {
     display: flex;
     gap: 24px;
 
-    .icons {
+    .payment__text {
+      margin: 0;
+    }
+
+    .payment__icons {
       display: flex;
       justify-content: center;
       gap: 15px;
+      cursor: pointer;
     }
   }
 }
